--- a/HalalGuide/en.lproj/Localizable.strings
+++ b/HalalGuide/en.lproj/Localizable.strings
@@ -135,6 +135,7 @@
 "HGFrontPageViewController.label.enumber"= "Enumber";
 "HGFrontPageViewController.label.eat"= "Eat";
 "HGFrontPageViewController.label.mosque"= "Mosque";
+"HGFrontPageViewController.label.favorite"= "Favorites";
 "HGFrontPageViewController.label.settings"= "Settings";
 "HGFrontPageViewController.label.latest.updates" = "Latest updates";
 "HGFrontPageViewController.hud.fetching" = "Updating";
@@ -260,3 +261,8 @@
 "HGCreateLocationViewController.alert.message.location.saved" = "Your suggestion has been submitted for approval, would you like to add a review";
 "HGCreateLocationViewController.alert.cancel.done" = "No thank you";
 "HGCreateLocationViewController.alert.add.review" = "Yes please";
+
+"HGFavoriteViewController.label.no.favorites" = "You have not added any favorites";
+"HGFavoriteViewController.title" = "Favorites";
+"HGFavoriteViewController.hud.fetching" = "Updating";
+"HGFavoriteViewController.hud.error" = "An unknown error has occured";
