--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -261,8 +261,8 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "HGCreateLocationViewController.alert.message.location.saved" = "Dit forslag er blevet indsendt til godkendelse, vil du tilføje en anmeldelse";
 "HGCreateLocationViewController.alert.cancel.done" = "Nej tak";
 "HGCreateLocationViewController.alert.add.review" = "Jo tak";
-"HGLocationDetailsPictureView.alert.smiley.warning" = "HGLocationDetailsPictureView.alert.smiley.warning";
-"HGLocationDetailsPictureView.alert.smiley.message" = "HGLocationDetailsPictureView.alert.smiley.message";
+"HGCreateLocationViewController.button.add.picture" = "Tilføj billede";
+
 
 "HGFavoriteViewController.label.no.favorites" = "Du har ikke tilføjet nogen favoritter";
 "HGFavoriteViewController.title" = "Favoritter";
