Notice board funtion #29

--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -266,5 +266,5 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "HGFavoriteViewController.hud.fetching" = "Opdaterer";
 "HGFavoriteViewController.hud.error" = "Der er sket en ukendt fejl";
 
-
-
+"HGChatViewController.button.close" = "Luk";
+"HGChatViewController.button.new.subject" = "Nyt emne";
