--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -268,3 +268,5 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 
 "HGChatViewController.button.close" = "Luk";
 "HGChatViewController.button.new.subject" = "Nyt emne";
+"HGChatViewController.cell.detail.text.label.single" = "%@ besked (%@)";
+"HGChatViewController.cell.detail.text.label.multiple" = "%@ beskeder (sidste besked: %@)";
