--- a/HalalGuide/en.lproj/Localizable.strings
+++ b/HalalGuide/en.lproj/Localizable.strings
@@ -270,7 +270,7 @@
 "HGFavoriteViewController.hud.fetching" = "Updating";
 "HGFavoriteViewController.hud.error" = "An unknown error has occured";
 
-"HGChatViewController.button.close" = "Close";
-"HGChatViewController.button.new.subject" = "New subject";
-"HGChatViewController.cell.detail.text.label.single" = "%@ message (%@)";
-"HGChatViewController.cell.detail.text.label.multiple" = "%@ messages (last message: %@)";
+"HGSubjectsChatViewController.button.close" = "Close";
+"HGSubjectsChatViewController.button.new.subject" = "New subject";
+"HGSubjectsChatViewController.cell.detail.text.label.single" = "%@ message (%@)";
+"HGSubjectsChatViewController.cell.detail.text.label.multiple" = "%@ messages (last message: %@)";
