--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -271,9 +271,16 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "HGSubjectsViewController.button.new.subject" = "Nyt emne";
 "HGSubjectsViewController.cell.detail.text.label.single" = "%@ besked (%@)";
 "HGSubjectsViewController.cell.detail.text.label.multiple" = "%@ beskeder (sidste besked: %@)";
+"HGSubjectsViewController.alert.new.subject.title" = "Nyt emne";
+"HGSubjectsViewController.alert.new.subject.message" = "Skriv titlen på det nye emne";
+"HGSubjectsViewController.alert.new.subject.ok" = "OK";
+"HGSubjectsViewController.alert.new.subject.regret" = "Fortryd";
+"HGSubjectsViewController.alert.new.subject.name.placeholder" = "Minimum 5 tegn";
 
 "HGMessageComposeView.button.submit" = "Send";
 "HGMessageComposeView.text.placeholder" = "Ny besked";
 
 "HGMessagesViewController.notification.on" = "Notifikationer slået til";
 "HGMessagesViewController.notification.off" = "Notifikationer slået fra";
+
+"HGChatViewController.title" = "Emner";
