--- a/HalalGuide/en.lproj/Localizable.strings
+++ b/HalalGuide/en.lproj/Localizable.strings
@@ -288,3 +288,4 @@
 "HGMessagesViewController.notification.off" = "Notifications disabled";
 
 "HGChatViewController.title" = "Subjects";
+"HGNavigationController.new.message" = "New message";
