--- a/HalalGuide/da-DK.lproj/Localizable.strings
+++ b/HalalGuide/da-DK.lproj/Localizable.strings
@@ -150,7 +150,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 
 "HGLocationDetailsSubmitterView.label.submitterHeadLine" = "Indsendt af:";
 
-"HGLocationDetailsPictureView.button.report" = "Rapporter fejl";
+"HGLocationDetailsPictureView.button.report" = "Foreslå ændringer";
 "HGLocationDetailsPictureView.button.add.review" = "Tilføj anmeldelse";
 "HGLocationDetailsPictureView.button.add.picture" = "Tilføj billede";
 "HGLocationDetailsPictureView.label.no.pictures" = "Der findes ingen billeder for dette sted endnu. Skal du være den første?";
