--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -174,6 +174,7 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "HGLocationDetailViewController.hud.fetching" = "Opdaterer";
 "HGLocationDetailViewController.hud.error" = "Fejl!";
 "HGLocationDetailViewController.hud.saving" = "Gemmer";
+"HGLocationDetailViewController.alert.share" = "Del";
 
 "HGImagePickerView.button.approve" = "Tilføj 1 billed";
 "HGImagePickerView.button.approve.multiple" = "Tilføj %lu billeder";
@@ -293,3 +294,5 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 "HGChatViewController.title" = "Emner";
 "HGNavigationController.new.message" = "Ny besked";
 
+
+"HGLocationDetailViewController.alert.share" = "Del";
