--- a/HalalGuide/Base.lproj/Localizable.strings
+++ b/HalalGuide/Base.lproj/Localizable.strings
@@ -296,3 +296,10 @@ Copyright (c) 2014 Eazy It. All rights reserved.
 
 
 "HGLocationDetailViewController.alert.share" = "Del";
+"HGLocationViewController.button.categories" = "Kategorier";
+"HGLocationViewController.button.language" = "Sprog";
+"HGLocationViewController.label.no.results" = "Ingen resultater med de givne filtre";
+
+"HGCategoryViewController.label.no.results" = "Ingen lokationer med den valgte kategori";
+"HGCategoryViewController.hud.fetching" = "Henter";
+"HGCategoryViewController.hud.error" = "Ukendt fejl";
